@@ -1187,6 +1187,7 @@ PolygonDeleteCoords(canvas, itemPtr, first, last)
 	polyPtr->numPoints = 0;
 	if(polyPtr->coordPtr != NULL) {
 	    ckfree((char *) polyPtr->coordPtr);
+	    polyPtr->coordPtr = NULL;
 	}
 	ComputePolygonBbox(canvas, polyPtr);
 	return;
